fix z-index of dialog in preview
the ui-dialog window was behind the editing area, so the z-index was defined

Conflicts:
	web/css/preview/preview-reset.css

--- a/web/css/preview/preview-reset.styl
+++ b/web/css/preview/preview-reset.styl
@@ -80,6 +80,9 @@
 #rapila_admin_menu .ui-widget,
 .ui-dialog.ui-widget
 	font-size 12px
+	
+.ui-dialog.ui-widget
+	z-index 1000
 
 /*#rapila_admin_menu .ui-widget-header
 	background linear-gradient(rgba((#2D3238-10%), 0.7), rgba((#2D3238+10%), 0.9))
